--- a/trunk/FullProject/Shop/MvcShop/Views/Shared/App_LocalResources/Shared1.resx
+++ b/trunk/FullProject/Shop/MvcShop/Views/Shared/App_LocalResources/Shared1.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
+  <data name="Count" xml:space="preserve">
+    <value>Count</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>Price</value>
+  </data>
+  <data name="Sorry" xml:space="preserve">
+    <value>Sorry, an error occurred while processing your request.</value>
   </data>
 </root>
