--- a/trunk/FullProject/Shop/MvcShop/App_GlobalResources/Account.resx
+++ b/trunk/FullProject/Shop/MvcShop/App_GlobalResources/Account.resx
@@ -159,4 +159,7 @@
   <data name="UseForm" xml:space="preserve">
     <value>Use the form below to create a new account.</value>
   </data>
+  <data name="YP" xml:space="preserve">
+    <value>Your password has been changed successfully.</value>
+  </data>
 </root>
