1. Добавлене зменшення кількості інгредієнтів на складі 2. Добавилений новий метод для пошуку інградієнту на складі за ІД інградієнта (не оде і то саме) 3. "Будь ласка" пишеться окремо 4. Змінена корзина та її анімація 5. Добавлено картинку "SS Shop"

--- a/FullProject/Shop/MvcShop/App_GlobalResources/Account.uk-UA.resx
+++ b/FullProject/Shop/MvcShop/App_GlobalResources/Account.uk-UA.resx
@@ -157,7 +157,7 @@
     <value>Реєстрація</value>
   </data>
   <data name="UP" xml:space="preserve">
-    <value>Будь-ласка введіть ваш логін та пароль</value>
+    <value>Будь ласка введіть ваш логін та пароль</value>
   </data>
   <data name="UseForm" xml:space="preserve">
     <value>Заповнити форму для створення нового акаунту.</value>
